--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# NOTE: These versions are specified based on PLAN.md Section 4.2
+# The exact versions may need adjustment based on the actual Rust version used for building.
+# Current specified versions target compatibility with rustc 1.68.1 but some transitive dependencies
+# require newer Rust versions. Further version adjustments or a Rust update may be needed.
+tokio = { version = "1.25.0", features = ["full"] }
+axum = { version = "0.6.0", features = ["http2", "json", "macros"] }
+reqwest = { version = "0.11.14", features = ["json", "stream", "rustls-tls"], default-features = false }
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
+uuid = { version = "1.2.2", features = ["v4"] }
+http = "0.2.9"
+hyper = { version = "0.14.25", features = ["server", "http1", "http2"] }
+bytes = "1.4.0"
+futures-util = "0.3.27"
