--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
+tracing-appender = "0.2.2"
 uuid = { version = "1.4.1", features = ["v4"] }
 http = "0.2.9"
 hyper = { version = "0.14.27", features = ["server", "http1", "http2"] }
