feat: implement dual-output logging infrastructure
Implemented a dual-output logging system with:
- File output: JSON formatted, non-blocking I/O, daily rotation, filtered by log_file_level
- Stdout output: Configurable format (pretty/JSON), filtered by log_stdout_level

Key features:
- Independent logging levels for each output
- Daily log file rotation
- Non-blocking file I/O
- Robust error handling for directory creation and filter parsing
- Configurable JSON or pretty format for stdout

Added tests and updated main.rs to properly store the WorkerGuard.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ axum = { version = "0.6.20" }  # Match the version used in main dependencies
 tower = { version = "0.4", features = ["util"] }
 http-body-util = "0.1"
 uuid = { version = "1.4.1", features = ["v4"] }  # Match the version used in main dependencies
+tempfile = "3.8"
