docs: update planning and tracking documents
- Add implementation plan for dual-output logging system
- Update BACKLOG with code quality improvement tasks
- Add new tasks to TODO for improved error handling and path validation
- Add log files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ thinktank_output/
 TASK-PROMPT.md
 CODE_REVIEW.md
 diff.md
+
+# Log files
+*.log*
+logs/
+benchmark.log.*
+switchboard.log.*
+test_switchboard.log.*
