feat: improve logger directory creation error handling
- Add LogInitError enum with detailed error variants
- Return Result from init_tracing with proper error information
- Add validation for empty log file paths
- Improve error handling for filter parsing
- Update all callers to handle potential errors
- Add tests for error conditions

Part of T015: Improve Logger Directory Creation Error Handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ hyper = { version = "0.14.27", features = ["server", "http1", "http2"] }
 bytes = "1.4.0"
 futures-util = "0.3.28"
 dotenvy = "0.15.7"
+thiserror = "1.0.48"
 
 [dev-dependencies]
 # Testing dependencies for integration tests
