feat: enhance log file path validation
- Add comprehensive path validation for security
- Prevent path traversal attacks via '../' sequences
- Block logging to reserved system paths
- Validate directory permissions before writing
- Add detailed error reporting for different validation failures
- Make validation function public with comprehensive docs
- Update tests to verify all validation scenarios
- Add libc dependency for Unix permission checking

Part of T016: Enhance Log File Path Validation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ bytes = "1.4.0"
 futures-util = "0.3.28"
 dotenvy = "0.15.7"
 thiserror = "1.0.48"
+libc = "0.2.153"
 
 [dev-dependencies]
 # Testing dependencies for integration tests
