fix: ensure log directories exist but exclude log files
- Update .gitignore to keep log directory structure but exclude log files
- Add .gitkeep files to ensure log directories exist in git
- Add cleanup script to remove log files after tests
- Update CI_FAILURES.md with analysis

This change addresses the log files check failure in CI by ensuring the
directory structure exists without including any log files in git.

--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,17 @@ diff.md
 # Log files
 *.log
 *.log.*
-/logs/
 /logs/**/*.log
 /logs/**/*.log.*
+/logs/app/*
+/logs/test/*
 /switchboard.log*
 /benchmark.log*
 /test_switchboard.log*
+
+# Make sure logs directories exist but are empty
+!/logs/
+!/logs/app/
+!/logs/test/
+!/logs/app/.gitkeep
+!/logs/test/.gitkeep
