--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,8 @@ directories = "6.0.0"
 clap = { version = "4.4.6", features = ["derive", "cargo"] }
 filetime = "0.2.21"  # For manipulating file timestamps in tests
 chrono = "0.4.31"  # For date handling in log cleanup
+nix = { version = "0.28.0", features = ["user"] }  # For Unix user/group ID in fs_utils
+rand = "0.8.5"  # For generating random filenames in fs_utils
 
 [dev-dependencies]
 # Testing dependencies for integration tests
