feat: add rustfmt hook to pre-commit config (T002)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,1 +1,9 @@
-repos: []
+repos:
+- repo: local
+  hooks:
+    - id: rustfmt
+      name: Rust Formatter Check
+      entry: cargo fmt -- --check
+      language: system
+      types: [rust]
+      pass_filenames: false # Run against the whole project state if any .rs file changed
