--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,9 @@ repos:
       language: system
       types: [rust]
       pass_filenames: false
+- repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+  rev: v9.13.0 # Specify a pinned, stable version
+  hooks:
+    - id: commitlint
+      stages: [commit-msg]
+      additional_dependencies: ['@commitlint/config-conventional'] # Use conventional commit rules
