--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -329,6 +329,48 @@ jobs:
         run: cargo build --release --verbose
 
 
+  pre-commit-linux:
+    name: Pre-commit Hooks (Linux)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Cache pre-commit dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: ${{ runner.os }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pre-commit-
+      - name: Install pre-commit
+        run: pip install pre-commit
+      - name: Run pre-commit hooks
+        run: pre-commit run --all-files
+        
+  pre-commit-macos:
+    name: Pre-commit Hooks (macOS)
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Cache pre-commit dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: ${{ runner.os }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pre-commit-
+      - name: Install pre-commit
+        run: pip install pre-commit
+      - name: Run pre-commit hooks
+        run: pre-commit run --all-files
+
   cross-platform-verification:
     name: Cross-Platform Verification
     needs: [
@@ -336,6 +378,7 @@ jobs:
       lint-linux, lint-macos,
       test-linux, test-macos,
       build-linux, build-macos,
+      pre-commit-linux, pre-commit-macos,
       log-check, hardcoded-literals-check
     ]
     runs-on: ubuntu-latest
@@ -347,6 +390,7 @@ jobs:
           echo "The following checks were verified on Linux and macOS:"
           echo "- Code formatting with cargo fmt"
           echo "- Code linting with cargo clippy"
+          echo "- Pre-commit hooks validation"
           echo "- All tests with cargo test"
           echo "- Release build with cargo build --release"
           echo "- No log files committed to the repository"
