--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,11 @@
 repos:
+- repo: https://github.com/doublify/pre-commit-rust
+  rev: v1.0
+  hooks:
+    - id: fmt
+      name: Rust Formatter Check
 - repo: local
   hooks:
-    - id: rustfmt
-      name: Rust Formatter Check
-      entry: cargo fmt -- --check
-      language: system
-      types: [rust]
-      pass_filenames: false # Run against the whole project state if any .rs file changed
     - id: clippy
       name: Rust Linter Check
       entry: cargo clippy --all-targets -- -D warnings # Fail on any warnings
