chore: pin remote rustfmt hook to specific commit hash
This change improves reproducibility by:
- Replacing tag reference with immutable commit hash
- Ensuring consistent formatting across all environments
- Preventing potential issues if tag is moved in the future

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/doublify/pre-commit-rust
-  rev: v1.0
+  rev: eeee35a89e69d5772bdee97db1a6a898467b686e # v1.0 tag
   hooks:
     - id: fmt
       name: Rust Formatter Check
