chore: pin @commitlint/config-conventional dependency to 19.8.0
This change improves reproducibility by:
- Pinning to the specific version 19.8.0 of @commitlint/config-conventional
- Ensuring consistent commit validation across all environments
- Preventing unexpected behavior from future dependency updates

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,4 +12,4 @@ repos:
   hooks:
     - id: commitlint
       stages: [commit-msg]
-      additional_dependencies: ['@commitlint/config-conventional'] # Use conventional commit rules
+      additional_dependencies: ['@commitlint/config-conventional@19.8.0'] # Use conventional commit rules with pinned version
