--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ axum = { version = "0.6.20", features = ["http2", "json", "macros"] }
 reqwest = { version = "0.11.20", features = ["json", "stream", "rustls-tls"], default-features = false }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
+async-openai = { version = "0.28.1", features = ["rustls"], default-features = false }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
 tracing-appender = "0.2.2"
