fix: resolve benchmark build target warnings and optimize test structure
- Changed benchmark declarations in Cargo.toml to resolve build warnings
- Fixed unused SecretString import in config_error_test.rs
- Split config_test.rs into multiple files to resolve file length warnings
- Added task T023 to fix benchmark build target warnings
- Resolved all warning messages in cargo commands

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,15 @@ path = "src/lib.rs"
 name = "switchboard"
 path = "src/main.rs"
 
-[[bin]]
+[[bench]]
 name = "manual_benchmark"
 path = "benches/manual_benchmark.rs"
+harness = false  # Custom benchmark without Criterion harness
 
-[[bin]]
+[[bench]]
 name = "simple_benchmark"
 path = "benches/simple_benchmark.rs"
+harness = false  # Custom benchmark without Criterion harness
 
 [[bench]]
 name = "logging_benchmarks"
